--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,129 @@
-# Compiled class file
-*.class
 
-# Log file
-*.log
 
-# BlueJ files
-*.ctxt
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+import java.util.Scanner;
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+
+
+class palindrome {
+
+
+
+    public static void main(String[] args) {
+
+
+
+        Scanner scanner=new Scanner(System.in);
+
+
+
+        System.out.println("Enter a string as an input to check whether it is palindrome or not");
+
+
+
+        String input= scanner.nextLine();
+
+
+
+        //checking whether palindrome or not
+
+
+
+        if(isPalindrome(input))
+
+
+
+        {
+
+
+
+            System.out.println(input+" is a palindrome string");
+
+
+
+        }
+
+
+
+        else
+
+
+
+        {
+
+
+
+            System.out.println(input+" is not a palindrome string");
+
+
+
+        }
+
+
+
+    }
+
+
+
+ 
+
+
+
+    public static boolean isPalindrome(String str) {
+
+
+
+        int left = 0, right = str.length() - 1;
+
+
+
+        while(left < right)
+
+
+
+        {
+
+
+
+            if(str.charAt(left) != str.charAt(right))
+
+
+
+            {
+
+
+
+                return false;
+
+
+
+            }
+
+
+
+            left++;
+
+
+
+            right--;
+
+
+
+        }
+
+
+
+        return true;
+
+
+
+    } 
+
+
+
+}
+
+
+
+
